--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Cloudinary
@@ -17,3 +19,4 @@ cloudinary.api-secret=${CLOUDINARY_API_SECRET}
 # Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+springdoc.show-actuator=true
